--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CampManager
+application.vendor=Akshaya
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,25 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/CampManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.jxl-2.6.12.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\jxl-2.6.12.jar
+file.reference.poi-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-3.10-FINAL-20140208.jar
+file.reference.poi-examples-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-examples-3.10-FINAL-20140208.jar
+file.reference.poi-excelant-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-excelant-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-3.10-FINAL-20140208.jar
+file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-schemas-3.10-FINAL-20140208.jar
+file.reference.poi-scratchpad-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-scratchpad-3.10-FINAL-20140208.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.XStream.classpath}
+    ${libs.XStream.classpath}:\
+    ${file.reference.poi-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-examples-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-excelant-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar}:\
+    ${file.reference.poi-scratchpad-3.10-FINAL-20140208.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -61,7 +76,8 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.jxl-2.6.12.jar}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
