Fixed 02 - added Queries

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,11 @@ file.reference.poi-excelant-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\
 file.reference.poi-ooxml-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-3.10-FINAL-20140208.jar
 file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-ooxml-schemas-3.10-FINAL-20140208.jar
 file.reference.poi-scratchpad-3.10-FINAL-20140208.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\poi-bin-3.10-FINAL-20140208\\poi-3.10-FINAL\\poi-scratchpad-3.10-FINAL-20140208.jar
+file.reference.seaglasslookandfeel-0.2.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\seaglasslookandfeel-0.2.jar
+file.reference.synthetica.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\java\\jar files\\synthetica.jar
+file.reference.syntheticaBlackMoon.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\java\\jar files\\syntheticaBlackMoon.jar
+file.reference.syntheticaBlackStar.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\java\\jar files\\syntheticaBlackStar.jar
+file.reference.syntheticaSkyMetallic.jar=P:\\Users\\Akshaya\\Desktop\\frigoglass\\java\\jar files\\syntheticaSkyMetallic.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +50,12 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.10-FINAL-20140208.jar}:\
     ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
     ${file.reference.poi-ooxml-schemas-3.10-FINAL-20140208.jar}:\
-    ${file.reference.poi-scratchpad-3.10-FINAL-20140208.jar}
+    ${file.reference.poi-scratchpad-3.10-FINAL-20140208.jar}:\
+    ${file.reference.seaglasslookandfeel-0.2.jar}:\
+    ${file.reference.synthetica.jar}:\
+    ${file.reference.syntheticaBlackMoon.jar}:\
+    ${file.reference.syntheticaBlackStar.jar}:\
+    ${file.reference.syntheticaSkyMetallic.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
