--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -66,7 +66,9 @@ javac.classpath=\
     ${file.reference.icons-customicondesign-flatastic1-simple}:\
     ${libs.beans-binding.classpath}:\
     ${file.reference.charts4j-1.3.jar}:\
-    ${file.reference.campmanager-resources}
+    ${file.reference.campmanager-resources}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
